--- a/.github/workflows/build-and-publish-artifacts.yml
+++ b/.github/workflows/build-and-publish-artifacts.yml
@@ -56,7 +56,8 @@ jobs:
           name: tsa-jars
           path: |
             tsa-cli/build/libs/tsa-cli.jar
-            tsa-safety-properties/build/libs/tsa-safety-properties.jar
+          # Don't upload jettons checker as it is more an example than a real tool
+          # tsa-jetton/build/libs/tsa-jettons.jar
           if-no-files-found: error
 
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
