--- a/.github/workflows/build-and-publish-artifacts.yml
+++ b/.github/workflows/build-and-publish-artifacts.yml
@@ -87,7 +87,10 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: |
+            linux/amd64
+          # Only linux/amd64 can be used as we use x86_64 ton binaries
+#            linux/arm64
           push: true
           tags: ghcr.io/espritoxyz/tsa:latest
 #          tags: ${{ steps.meta.outputs.tags }}
