Changed release trigger to workflow dispatch

--- a/.github/workflows/build-and-draft-release.yml
+++ b/.github/workflows/build-and-draft-release.yml
@@ -1,8 +1,7 @@
 name: Build and draft release
 
 on:
-  push:
-    branches: [ "main", "master" ]
+  workflow_dispatch:
 
 permissions:
   contents: write
