--- a/.github/workflows/build-and-draft-release.yml
+++ b/.github/workflows/build-and-draft-release.yml
@@ -29,7 +29,7 @@ jobs:
           echo "sha_full=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: 'Assemble'
-        run: ./gradlew clean assemble
+        run: ./gradlew clean :tsa-cli:shadowJar
 
       - name: 'Create draft release'
         uses: softprops/action-gh-release@v1
